aggiunto url.action per menu controller

--- a/LaMiaPizzeria/Views/Pizza/Index.cshtml
+++ b/LaMiaPizzeria/Views/Pizza/Index.cshtml
@@ -3,6 +3,7 @@
     Layout = null;
  }
 @model List<PizzaModel>;
+
 <!doctype html>
 <html>
 <head>
@@ -45,7 +46,7 @@
                     }
                 }
 
-                <div class="col-4">
+               @* <div class="col-4">
 
                     <div class="card">
                         <img src="https://www.farinapetra.it/cms-data/gallery/blog/Notizie2/tredicisette-ecco-la-pizza-gourmet-di-marco-da-palermo-a-melbourne-andata-e-ritorno/78239603_2198051336961703_2909228752581951488_n-sq.jpg" class="card-img-top" alt="Pistacchiosa">
@@ -110,7 +111,7 @@
                         </div>
                     </div>
 
-                </div>
+                </div>*@
 
             </div>
 
