--- a/LaMiaPizzeria/Views/Pizza/Index.cshtml
+++ b/LaMiaPizzeria/Views/Pizza/Index.cshtml
@@ -28,11 +28,9 @@
 
             <div class="row mt-3">
 
-                @{
-                    foreach (PizzaModel pizza in Model)
-                    {
-
-                        <div class="col-4">
+                @{  foreach (PizzaModel pizza in Model)
+                    { 
+                        <div class="col-4 mt-2">
 
                             <div class="card">
                                 <img src="@pizza.ImgSource" class="card-img-top" alt="Margherita">
@@ -43,76 +41,8 @@
                                 </div>
                             </div>
                         </div>
-                    }
-                }
-
-               @* <div class="col-4">
-
-                    <div class="card">
-                        <img src="https://www.farinapetra.it/cms-data/gallery/blog/Notizie2/tredicisette-ecco-la-pizza-gourmet-di-marco-da-palermo-a-melbourne-andata-e-ritorno/78239603_2198051336961703_2909228752581951488_n-sq.jpg" class="card-img-top" alt="Pistacchiosa">
-                        <div class="card-body">
-                            <h3 class="card-text">Pistacchiosa</h3>
-                            <p class="card-text">Golosa con Mortazza e Pistacchio, che vuoi di più?</p>
-                            <h4 class="card-text">11,50 €</h4>
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="col-4">
-
-                    <div class="card">
-                        <img src="https://www.lucianopignataro.it/wp-content/uploads/2019/02/La-Fuoco-e-Neve-e1550405811162.jpg" class="card-img-top" alt="Pizza-Gourmet">
-                        <div class="card-body">
-                            <h3 class="card-text">Gourmet</h3>
-                            <p class="card-text">Per chi ha un palato superiore!</p>
-                            <h4 class="card-text">14,00 €</h4>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-            <div class="row mt-3">
-
-                <div class="col-4">
-
-                    <div class="card">
-                        <img src="https://www.dottorpeperoncino.com/img_news/big/54.jpg" class="card-img-top" alt="Diavola">
-                        <div class="card-body">
-                            <h3 class="card-text">Diavola</h3>
-                            <p class="card-text">Più piccante di un peperoncino calabrese</p>
-                            <h4 class="card-text">7,50 €</h4>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-4">
-
-                    <div class="card">
-                        <img src="https://www.tasteatlas.com/images/dishes/b44b470fae3648d0bffd06aa9e7b782c.jpg" class="card-img-top" alt="Vegetariana">
-                        <div class="card-body">
-                            <h3 class="card-text">Vegetariana</h3>
-                            <p class="card-text">Preparata solo con prodotti di altissima qualità</p>
-                            <h4 class="card-text">7,00 €</h4>
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="col-4">
-
-                    <div class="card">
-                        <img src="https://img77.uenicdn.com/image/upload/v1581079579/service_images/shutterstock_327717539.jpg" class="card-img-top" alt="Pizza-Dolce">
-                        <div class="card-body">
-                            <h3 class="card-text">Dolce</h3>
-                            <p class="card-text">Attenzione alla glicemia!</p>
-                            <h4 class="card-text">8,00 €</h4>
-                        </div>
-                    </div>
-
-                </div>*@
-
+                     }
+                }       
             </div>
 
         </div>
