--- a/LaMiaPizzeria/Views/Pizza/Index.cshtml
+++ b/LaMiaPizzeria/Views/Pizza/Index.cshtml
@@ -1,61 +1,27 @@
-﻿@using LaMiaPizzeria.DataBase;
-@{
-    Layout = null;
- }
-@model List<PizzaModel>;
+﻿<h1 class="text-center mt-5">MENÙ</h1>
+    <div class="container mt-3">
 
-<!doctype html>
-<html>
-<head>
+        <div class="row mt-3">
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pizzeria da Tonino</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link href="~/css/site.css" rel="stylesheet" />
+            @{  foreach (PizzaModel pizza in Model)
+                { 
+                    <div class="col-4 mt-2">
 
-</head>
-
-<body style="background-image: url('https://previews.123rf.com/images/betelgejze/betelgejze1604/betelgejze160400001/54790204-pizza-al-taglio-e-piatto-linea-forchetta-e-coltello-su-sfondo-con-texture-grunge-disegno.jpg');">
-
-    <header>
-        @Html.Partial("_Header")
-    </header>
-
-    <main>
-        <h1 class="text-center mt-5">MENÙ</h1>
-        <div class="container mt-3">
-
-            <div class="row mt-3">
-
-                @{  foreach (PizzaModel pizza in Model)
-                    { 
-                        <div class="col-4 mt-2">
-
-                            <div class="card">
-                                <img src="@pizza.ImgSource" class="card-img-top" alt="Margherita">
-                                <div class="card-body">
-                                    <h3 class="card-text">@pizza.Name</h3>
-                                    <p class="card-text">@pizza.Description</p>
-                                    <h4 class="card-text">@pizza.Price.ToString("0.00") €</h4>
-                                </div>
+                        <div class="card">
+                            <img src="@pizza.ImgSource" class="card-img-top" alt="Tipo di pizza">
+                            <div class="card-body">
+                                <h3 class="card-text">@pizza.Name</h3>
+                                <p class="card-text">@pizza.Description</p>
+                                <h4 class="card-text">@pizza.Price.ToString("0.00") €</h4>
                             </div>
                         </div>
-                     }
-                }       
-            </div>
-
+                    </div>
+                    }
+            }       
         </div>
-    </main>
 
-    <footer>
-        @Html.Partial("_Footer")
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-</body>
-
-</html>
+    </div>
+    
 
 
 
