--- a/LaMiaPizzeria/Views/Pizza/Index.cshtml
+++ b/LaMiaPizzeria/Views/Pizza/Index.cshtml
@@ -1,23 +1,25 @@
-﻿<h1 class="text-center mt-5">MENÙ</h1>
+﻿@model List<PizzaModel>
+
+<h1 class="text-center mt-5">MENÙ</h1>
     <div class="container mt-3">
 
         <div class="row mt-3">
 
-            @{  foreach (PizzaModel pizza in Model)
-                { 
-                    <div class="col-4 mt-2">
+            @foreach (PizzaModel pizza in Model)
+            { 
+                <div class="col-4 mt-2">
 
-                        <div class="card">
-                            <img src="@pizza.ImgSource" class="card-img-top" alt="Tipo di pizza">
-                            <div class="card-body">
-                                <h3 class="card-text">@pizza.Name</h3>
-                                <p class="card-text">@pizza.Description</p>
-                                <h4 class="card-text">@pizza.Price.ToString("0.00") €</h4>
-                            </div>
+                    <div class="card">
+                        <img src="@pizza.ImgSource" class="card-img-top" alt="Tipo di pizza">
+                        <div class="card-body">
+                            <h3 class="card-text">@pizza.Name</h3>
+                            <p class="card-text">@pizza.Description</p>
+                            <h4 class="card-text">@pizza.Price.ToString("0.00") €</h4>
                         </div>
                     </div>
-                    }
-            }       
+                </div>
+            }
+                   
         </div>
 
     </div>
