--- a/LaMiaPizzeria/Views/Shared/_Header.cshtml
+++ b/LaMiaPizzeria/Views/Shared/_Header.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link text-light" href="@Url.Action("Index","Pizza")">Menù</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" href="@Url.Action("Index","Form")">Crea la tua pizza</a>
+                            <a class="nav-link text-light" href="@Url.Action("Create","Pizza")">Crea la tua pizza</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
