--- a/LaMiaPizzeria/Views/Pizza/Details.cshtml
+++ b/LaMiaPizzeria/Views/Pizza/Details.cshtml
@@ -7,7 +7,7 @@
                 <h1 class="mt-3 mb-3">Dettagli Pizza</h1>
             </div>
             <div class="post-single-image-container">
-                <img src="@Model.ImgSource" alt="Immagine @Model.Name">
+                <img src="@Model.ImgSource" alt="Immagine @Model.Name" width="300">
             </div>
             <p>
                 <strong>Titolo:</strong>
