--- a/LaMiaPizzeria/Views/Pizza/Index.cshtml
+++ b/LaMiaPizzeria/Views/Pizza/Index.cshtml
@@ -15,7 +15,7 @@
                             <h3 class="card-text">@pizza.Name</h3>
                             <p class="card-text">@pizza.Description</p>
                             <h4 class="card-text">@pizza.Price.ToString("0.00") €</h4>
-                        <a class="nav-link active text-black" aria-current="page" href="@Url.Action("Details", "Pizza")">Dettagli</a>
+                        <a class="nav-link active text-black" aria-current="page" href="@Url.Action("Details", "Pizza", new {id = pizza.id})">Dettagli</a>
                         </div>
                     </div>
                 </div>
