--- a/LaMiaPizzeria/Views/Pizza/Index.cshtml
+++ b/LaMiaPizzeria/Views/Pizza/Index.cshtml
@@ -16,6 +16,7 @@
                             <p class="card-text">@pizza.Description</p>
                             <h4 class="card-text">@pizza.Price.ToString("0.00") €</h4>
                         <a class="nav-link active text-black" aria-current="page" href="@Url.Action("Details", "Pizza", new {id = pizza.id})">Dettagli</a>
+                        <a class="nav-link active text-black" aria-current="page" href="@Url.Action("Update", "Pizza", new {id = pizza.id})">Modifica</a>
                         </div>
                     </div>
                 </div>
