aggiunto delete action e pulsante delete, cambiato immagine sfondo e corretto bug modifica

--- a/LaMiaPizzeria/Views/Shared/_MioLayout.cshtml
+++ b/LaMiaPizzeria/Views/Shared/_MioLayout.cshtml
@@ -12,7 +12,7 @@
 
 </head>
 
-<body style="background-image: url('https://previews.123rf.com/images/betelgejze/betelgejze1604/betelgejze160400001/54790204-pizza-al-taglio-e-piatto-linea-forchetta-e-coltello-su-sfondo-con-texture-grunge-disegno.jpg');">
+<body>
 
     <header>
         @Html.Partial("_Header")
