--- a/LaMiaPizzeria/Views/Pizza/Details.cshtml
+++ b/LaMiaPizzeria/Views/Pizza/Details.cshtml
@@ -1,22 +1,21 @@
 ﻿@model PizzaModel
+<div class="container mt-3">
 
-<div class="container">
-    <div class="row">
-        <div class="col-12">
-            <div class="d-flex align-items-center">
-                <h1 class="mt-3 mb-3">Dettagli Pizza</h1>
+    <div class="row mt-3">
+
+        <div class="col-4 mt-2">
+
+            <div class="card">
+                <img src="@Model.ImgSource" class="card-img-top" alt="Tipo di pizza">
+                <div class="card-body">
+                    <h3 class="card-text">Nome: @Model.Name</h3>
+                    <p class="card-text">Descrizione: @Model.Description</p>
+                    <h4 class="card-text">Prezzo: @Model.Price.ToString("0.00") €</h4>
+                </div>
             </div>
-            <div class="post-single-image-container">
-                <img src="@Model.ImgSource" alt="Immagine @Model.Name" width="300">
-            </div>
-            <p>
-                <strong>Titolo:</strong>
-                @Model.Name
-            </p>
-            <p>
-                <strong>Contenuto:</strong>
-                @Model.Description
-            </p>
+        
         </div>
+
     </div>
+
 </div>
