--- a/LaMiaPizzeria/Views/Pizza/Update.cshtml
+++ b/LaMiaPizzeria/Views/Pizza/Update.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PizzaModel  
 <div class="container">
     <h2 class="mb-3">Modifica della Pizza</h2>
-    <form asp-controller="Article" asp-action="Update" asp-route-id="@Model.id" method="post">
+    <form asp-controller="Pizza" asp-action="Update" asp-route-id="@Model.id" method="post">
         @Html.AntiForgeryToken()
         <div class="mb-3">
             <label asp-for="id" class="form-label">Id Pizza</label>
