--- a/LaMiaPizzeria/wwwroot/css/site.css
+++ b/LaMiaPizzeria/wwwroot/css/site.css
@@ -29,3 +29,21 @@ footer {
     padding: 0;
 }
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-image: url('https://img.freepik.com/free-photo/delicious-neapolitan-meat-pizza-pizzeria-delicious-food_78826-2833.jpg?w=1060&t=st=1685113202~exp=1685113802~hmac=5da351e2f7907c44e15d343dd692980ab423efc130b26f687860e4aec5cc3b72');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
+}
+
+footer {
+    position: fixed;
+    
+    
+}
